--- a/Pipfile
+++ b/Pipfile
@@ -14,8 +14,11 @@ django-cors-headers = "*"
 gunicorn = "*"
 django-heroku = "*"
 django-rest-api = "*"
+graphene = "*"
+graphene-django = "*"
+schema = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.8.1"
